[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Oponente.gd" type="Script" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 540 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Pared Superior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared Superior"]
position = Vector2( 960, -50 )
shape = SubResource( 1 )

[node name="Pared Inferior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared Inferior"]
position = Vector2( 960, 1130 )
shape = SubResource( 1 )

[node name="ArcoPlayerIzk" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoPlayerIzk"]
position = Vector2( -50, 540 )
shape = SubResource( 2 )

[node name="ArcoPlayerDer2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoPlayerDer2"]
position = Vector2( 1970, 540 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 460 )

[node name="Oponente" parent="." instance=ExtResource( 1 )]
position = Vector2( 1870, 460 )
script = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 959, 80 )

[node name="MarcadorPlayer" type="Label" parent="."]
margin_left = -200.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Marcador Player"
align = 1
valign = 1

[node name="MarcadorPlayerDer" type="Label" parent="."]
margin_left = 200.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Marcador Player"
align = 1
valign = 1

[connection signal="body_entered" from="ArcoPlayerIzk" to="." method="_on_ArcoPlayerIzk_body_entered"]
[connection signal="body_entered" from="ArcoPlayerDer2" to="." method="_on_ArcoPlayerDer2_body_entered"]
